Device Get And Post

--- a/MikroClean.Infrastructure/MikroClean.Infrastructure.csproj
+++ b/MikroClean.Infrastructure/MikroClean.Infrastructure.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\MikroClean.Domain\MikroClean.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
