--- a/MikroClean.WebAPI/appsettings.json
+++ b/MikroClean.WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Connection": "Server=localhost,1433;Database=MikroCleanDB;User Id=sa;Password=TuPasswordFuerte123!;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
